--- a/frontend/src/i18n/locales/ko/event.json
+++ b/frontend/src/i18n/locales/ko/event.json
@@ -4,7 +4,7 @@
 
   "nav": {
     "title": "클릭하여 클립 보드에 복사",
-    "copied": "클립 보드에 복사되었습니다!",
+    "copied": "복사됨!",
     "shareinfo": "이 페이지에 대한 링크를 복사하거나 <1>이메일을</1> 통해 공유하세요.",
     "shareinfo_alt": "위의 링크를 클릭하여 클립 보드에 복사하거나 <1>이메일로</1> 공유하세요.",
     "email_subject": "일정 {{event_name}}",
@@ -17,22 +17,22 @@
     "name": "당신의 이름",
     "password": "비밀번호 (선택 사항)",
     "button": "로그인",
-    "logout_button": "로그아웃합니다",
-    "info": "이러한 세부 정보는이 이벤트에 한정됩니다. 다른 사람이 귀하의 가용성을 변경하지 못하도록 암호를 사용하십시오.",
+    "logout_button": "로그아웃",
+    "info": "이 세부정보는 이 이벤트에 한에서만 적용됩니다. 다른사람이 변경하지 못하도록 암호를 설정하세요.",
 
     "timezone": "시간대",
 
     "errors": {
       "name_required": "사용 가능 여부를 저장하려면 이름이 필요합니다.",
-      "password_incorrect": "비밀번호가 맞지 않습니다. 당신의 이름이 바로 철자 확인하십시오.",
+      "password_incorrect": "비밀번호가 맞지 않습니다. 이름이 제대로 입력되었는지 확인하세요.",
       "unknown": "로그인 실패. 다시 시도하십시오."
     },
 
-    "created_in_timezone": "이 이벤트는 <strong>{{timezone}}</strong> 시간대로 생성되었습니다. 그것을 사용하려면 <3>여기를 클릭하십시오</3>.",
-    "local_timezone": "현지 시간대가 <strong>{{timezone}}</strong> 감지되었습니다. 그것을 사용하려면 <3>여기를 클릭하십시오</3>."
+    "created_in_timezone": "이 이벤트는 <strong>{{timezone}}</strong> 시간대로 생성되었습니다. 이 시간대를 사용하려면 <3>여기를 클릭하세요</3>.",
+    "local_timezone": "현지 시간대가 <strong>{{timezone}}</strong>으로 감지되었습니다. 이 시간대를 사용하려면 <3>여기를 클릭하세요</3>."
   },
   "offline": {
-    "title": "너는 지금 접속이 안되있어",
+    "title": "오프라인입니다.",
     "body": "Crab Fit은 오프라인에서 작동하지 않습니다.<br />인터넷에 연결되어 있는지 확인하고 다시 시도하세요."
   },
   "error": {
@@ -41,28 +41,32 @@
   },
 
   "tabs": {
-    "you": "귀하의 가용성",
-    "you_tooltip": "가용성을 설정하려면 로그인하십시오.",
-    "group": "그룹 가용성"
+    "you": "내 가능한 시간",
+    "you_tooltip": "가능한 시간대를 설정하려면 로그인하세요.",
+    "group": "다른 사람들의 가능한 시간"
   },
 
   "group": {
-    "legend_tooltip": "가장 높은 가용성을 강조하려면 클릭하십시오",
-    "info1": "누가 무료인지 확인하려면 아래 캘린더를 가리 키거나 탭하세요",
-    "info2": "사람들을 개별적으로 보려면 아래 이름을 클릭하십시오"
+    "legend_tooltip": "가장 많이 선택된 시간을 강조하려면 클릭하세요.",
+    "info1": "아래 달력에 마우스를 올리거나 탭하여 누가 가능한지 확인하고, 클릭하여 시간대에 대한 세부 정보를 복사하세요.",
+    "info2": "사람들을 개별적으로 보려면 아래 이름을 클릭하십시오",
+    "clipboard_message": "{{date}}에 가능합니다."
   },
 
   "you": {
     "info": "사용 가능 여부를 설정하려면 아래 캘린더를 클릭하고 드래그하세요",
     "select_all": "모두 선택",
     "select_none": "모두 선택 해제",
+    "select_invert": "선택 반전",
 
-    "google_cal": "Google 캘린더와 동기화합니다",
-    "outlook_cal": "아웃룩 캘린더와 동기화합니다",
+    "google_cal": "Google 캘린더와 동기화",
+    "outlook_cal": "아웃룩 캘린더와 동기화",
+    "recent_event": "최근 이벤트와 동기화",
     "integration": {
-      "logout": "로그 아웃",
-      "info": "가져 오면 현재 사용 가능 여부를 덮어 씁니다",
-      "button": "가용성 가져 오기"
+      "logout": "로그아웃",
+      "close": "닫기",
+      "info": "가져오기를 실행하면 현재 선택된 시간을 덮어 씁니다",
+      "button": "가능한 시간 가져 오기"
     }
   }
 }
