--- a/frontend/src/i18n/locales/ko/help.json
+++ b/frontend/src/i18n/locales/ko/help.json
@@ -1,12 +1,12 @@
 {
-  "name": "Crab Fit 방법",
+  "name": "Crab Fit 사용방법",
 
-  "p1": "게 맞춤이 친구 나 동료와 이벤트를 계획 할 때 당신을 도와주는 도구이다. 이벤트를 만들고, 사용 가능 여부를 입력하고, 보내고, 모든 사람이 언제 무료인지 확인하기 만하면됩니다!",
-  "p2": "방법에 대한 자세한 단계는 아래를 참조하십시오.",
+  "p1": "Crab Fit은 친구 또는 협업자와 이벤트를 계획 할 때 도와주는 웹 사이트입니다. 이벤트를 만들고, 가능한 시간을 선택한 후, 공유하고, 모든 사람이 가능한 시간을 확인하기만 하면 됩니다!",
+  "p2": "사용 방법은 아래 단계들을 참고하세요.",
 
   "s1": "1 단계",
 
-  "p3": "<1>crab.fit</1>의 양식을 사용하여 새 이벤트를 만드세요. 여기서 이벤트가 발생하는 대략적인 기간 만 입력하면됩니다.",
+  "p3": "<1>crab.fit</1>의 양식을 사용하여 새 이벤트를 만드세요. 이벤트가 발생하는 대략적인 기간을 선택하면 됩니다.",
   "p4": "예를 들어 \"Jenny의 생일 점심을\" 사용합니다. Jenny는 4 월 15 일 생일과 같은 주에 생일 점심 식사를하기를 원하지만 모든 친구가 15 일에 참석할 수있는 것은 아니라는 것을 알고 있습니다. 그녀는 또한 주말에하고 싶지 않습니다.",
   "p5": "Jenny는 점심 행사이기 때문에 오전 11시 이전에 시작하거나 오후 5시 이후에 갈 수 없다는 것도 알고 있습니다.",
 
