--- a/frontend/src/i18n/locales/ko/event.json
+++ b/frontend/src/i18n/locales/ko/event.json
@@ -11,7 +11,7 @@
     "email_body": "당신의 이용 가능성을 입력하려면이 링크를 방문하십시오 :"
   },
   "form": {
-    "signed_out": "당신의 가용성을 추가하려면 로그인",
+    "signed_out": "가능한 시간대를 추가하려면 로그인하세요!",
     "signed_in": "{{name}} 으로 로그인되었습니다.",
 
     "name": "당신의 이름",
